--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -6,5 +6,6 @@ spring:
   cloud:
     config:
       server:
-        native:
-          search-locations: c:/repo
+        git:
+          uri: https://github.com/araoalves/arquitetura-springcloud/blob/main/profiles
+          search-paths: fornecedor
