Subindo aplicação no docker

--- a/authentication-api/src/main/resources/bootstrap.yml
+++ b/authentication-api/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: authentication
   profiles:
-    active: dev
+    active: prod
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config-server:8888
