--- a/authentication-api/pom.xml
+++ b/authentication-api/pom.xml
@@ -84,6 +84,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <finalName>authentication-api</finalName>
                 </configuration>
             </plugin>
         </plugins>
