--- a/api-gateway-spring-cloud/src/main/resources/application.yml
+++ b/api-gateway-spring-cloud/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
           uri: lb://AUTHENTICATION
           predicates:
             - Path=/authentication/**
+        - id: eureka-server
+          uri: lb://EUREKA-SERVER
+          predicates:
+            - Path=/eureka-server/**
 eureka:
   client:
     register-with-eureka: true
