Finalizando deployment para o kubernets

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: config-server
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: config-server
@@ -36,7 +36,7 @@ kind: Deployment
 metadata:
   name: eureka-server
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: eureka-server
@@ -63,3 +63,69 @@ spec:
   - port: 8761
     targetPort: 8761
     nodePort: 30001
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: api-gateway
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: api-gateway
+  template:
+    metadata:
+      labels:
+        app: api-gateway
+    spec:
+      containers:
+      - name: api-gateway
+        image: afarias/api-gateway:1.0
+        ports:
+        - containerPort: 5556
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-gateway
+spec:
+  selector:
+    app: api-gateway
+  type: LoadBalancer
+  ports:
+  - port: 5556
+    targetPort: 5556
+    nodePort: 30002
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: authentication-api
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: authentication-api
+  template:
+    metadata:
+      labels:
+        app: authentication-api
+    spec:
+      containers:
+      - name: authentication-api
+        image: afarias/authentication-api:1.0
+        ports:
+        - containerPort: 8082
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: authentication-api
+spec:
+  selector:
+    app: authentication-api
+  type: LoadBalancer
+  ports:
+  - port: 8082
+    targetPort: 8082
+    nodePort: 30003
