--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 eureka:
   client:
     fetch-registry: false
-    register-with-eureka: true
+    register-with-eureka: false
 server:
   port: 8761
