--- a/loja-api/src/main/resources/application.yaml
+++ b/loja-api/src/main/resources/application.yaml
@@ -7,3 +7,11 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+fornecedor:
+  bocker:
+    exchange:
+      fornecedorEventExchang: fornecedor.fornecedorevent
+    queue:
+      fornecedorEventQueue:
+        name: fornecedor.fornecedorevent.ms.loja
