criando filas para cadastro de usuários em suas apis especificas.

--- a/authentication-api/src/main/resources/application.yml
+++ b/authentication-api/src/main/resources/application.yml
@@ -18,3 +18,8 @@ template_api:
    app:
      jwtSecret: bezKoderSecretKey
      jwtExpirationMs: 86400000
+
+authentication:
+  bocker:
+    exchange:
+      authenticationEventExchang: authentication.authenticationevent
