--- a/fornecedor-api/src/main/resources/application.yml
+++ b/fornecedor-api/src/main/resources/application.yml
@@ -24,3 +24,11 @@ fornecedor:
   bocker:
     exchange:
       fornecedorEventExchang: fornecedor.fornecedorevent
+
+authentication:
+  bocker:
+    exchange:
+      authenticationEventExchang: authentication.authenticationevent
+    queue:
+      authenticationEventQueue:
+        name: authentication.authenticationevent.ms.fornecedor
